Moved jacoco to profile, moved dependency-track to profile, added errorprone, checkerframework and jmoleclues, updated dependencies